--- a/exp_specs/bc/bc_hopper.yaml
+++ b/exp_specs/bc/bc_hopper.yaml
@@ -1,9 +1,9 @@
 meta_data:
-  script_path: run_scripts/bc_exp_script.py # This assign the running script file
-  exp_name: test_bc_hopper_16 # This decides the name of the log dir
+  script_path: run_scripts/bc_exp_script.py
+  exp_name: bc_hopper
   description: Train a Behavioural Cloning model # Just an annotation
-  num_workers: 1 # This decides how many sub-process will be run at the same time, the extra progress will fail after the resources of the machine are all occupied
-  using_gpus: true # Whether to use GPU
+  num_workers: 1
+  using_gpus: true
 # -----------------------------------------------------------------------------
 variables: # If you want to do grid search, take the constant variables to here and write down the grid value in a list, the run_experiment.py will split every combination of these varibles into small yaml files
   seed: [0]
@@ -14,7 +14,7 @@ constants: # These are constant hyperparameters without tunning, and the name is
   expert_idx: 0
   traj_num: 4
   scale_env_with_demo_stats: false
-  minmax_env_with_demo_stats: true
+  minmax_env_with_demo_stats: false
 
   policy_net_size: 256
   policy_num_hidden_layers: 2
@@ -22,11 +22,11 @@ constants: # These are constant hyperparameters without tunning, and the name is
   bc_params:
     mode: 'MLE'
 
-    num_epochs: 201 # Running epoch 
-    num_steps_per_epoch: 1000 # Sample steps per epoch (actually BC do not need sample)
-    num_steps_between_train_calls: 1000 # How frequency to train the algorithm 
-    max_path_length: 1000 # The sample length in a episode
-    min_steps_before_training: 0 # Just as it names
+    num_epochs: 100
+    num_steps_per_epoch: 1000  # Sample steps per epoch (actually BC do not need sample)
+    num_steps_between_train_calls: 1000  # How frequency to train the algorithm 
+    max_path_length: 1000  # The sample length in a episode
+    min_steps_before_training: 0  # Just as it names
 
     eval_deterministic: true
     num_steps_per_eval: 10000
@@ -46,12 +46,10 @@ constants: # These are constant hyperparameters without tunning, and the name is
 
     freq_saving: 20
     save_replay_buffer: false
-    # save_environment: false
-    # save_environment: false
 
   env_specs:
     env_name: 'hopper'
     env_kwargs: {}
     env_num: 1 # The number of the vec env, default (None) as 1
-    eval_env_seed: 78236 # These two seeds are no longer needed since in our implementation we makes all seeds the same, see the script file, however you can change the script to make it valid
     training_env_seed: 24495
+    eval_env_seed: 78236
