--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cu113
 dmc2gym @ git+https://github.com/denisyarats/dmc2gym.git
 torch==1.12.1+cu113
 torchaudio==0.12.1+cu113
